# descartes

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  linux-arm64-validation-brief.md  linux-daemon-lifecycle-validation-brief.md  linux-x86_64-validation-brief.md  macos-notifier-release-validation-brief.md  package-lock.json  package.json
.buildkite/: pipeline.yml
crates/descartes-root-helper/: Cargo.toml
crates/descartes-root-helper/scripts/: verify-install.sh
crates/descartes-root-helper/src/: argv.rs  hardening.rs  json.rs  lib.rs  main.rs  proc_linux.rs  procfs.rs  scan.rs
crates/descartes-root-helper/tests/: cli_contract.rs  hardening.rs  linux_resolution.rs
crates/descartes-root-helper/tests/fixtures/: echo-back-contract.json
docs/: HANDOFF.md  ROADMAP.md
scripts/: build-macos-notifier.sh  check-homebrew-tap-token.sh  ci-elevated-provenance.sh  generate-notifier-reuse-json.sh  notarize-macos-notifier.sh  notifier-reuse-decision.sh  notifier-source-digest.sh  probe-linux-ci-capability.sh  release-macos-notifier-buildkite.sh  validate-macos-notifier-helper.sh
todos/: 2026-05-19-agent-delegation-identity-authority.md  2026-05-19-expand-local-investigation-tools.md  2026-05-19-federated-process-knowledge-db.md  2026-05-19-first-external-slice-validation.md  2026-05-19-linux-ci-validation.md  2026-05-19-llm-driven-investigation-tools.md  2026-05-19-macos-disk-evidence-classification.md  2026-05-19-no-evidence-no-diagnosis-guard.md  2026-05-19-process-identity-lineage-tools.md  2026-05-19-temporal-sampling-investigation-tools.md  2026-05-19-vm-inventory-collector.md  2026-05-19-web-search-retrieval-tools.md  2026-05-23-agent-authored-sensor-toolkit.md  2026-05-23-daemon-history-store.md  2026-05-23-derived-collector-transformation-engine.md  2026-05-28-monitoring-alerting.md  2026-05-30-native-macos-notifications.md  2026-07-07-rcodesign-investigation.md  2026-07-08-macos-helper-delivery.md  2026-07-08-macos-release-validation.md  2026-07-09-self-learning-stratified-monitoring.md  2026-07-09-witr-provenance-and-approval-notifications.md
(+170 files in other folders)
