[package]
name = "descartes-root-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Fixed-argv /proc resolver invoked by descartes-cli's opt-in elevated read path (S3-priv)."

# ZERO runtime dependencies. This binary will later carry CAP_SYS_PTRACE (Slice 5); the
# supply-chain surface of a capability-bearing binary must be nil. Do not add a dependency here
# without revisiting that decision explicitly -- see docs/plans/2026-07-11-s3-priv-elevated-read-path.md.
[dependencies]

# serde_json is dev-only: it parses/validates JSON inside tests, it never ships in the binary.
[dev-dependencies]
serde_json = "1"
